Uploaded image for project: 'Apache NiFi MiNiFi C++'
  1. Apache NiFi MiNiFi C++
  2. MINIFICPP-510

Default property log msg is at wrong level (error vs. info)

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 0.5.0
    • None

    Description

      Config log messages for using default value are at error level, which is incorrect and misleading when monitoring logs. These messages should be at info level because relying on a default config value is a completely non-exceptional use case.

      [error] Using default value for optional field 'scheduling period' in component named 'XYZ' [in 'Processors' section of configuration file]

       

      Attachments

        Issue Links

          Activity

            People

              achristianson Andrew Christianson
              achristianson Andrew Christianson
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: