MINIFICPP-510 Fix log level when notifying of usage of default values